Fixed comments, added @Validated annotation to CategoryController